--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 idf_component_register(
-    SRCS "src/tinyxml2.cpp"
-    INCLUDE_DIRS "include"
-    # Optionally, add any necessary compile definitions:
-    # COMPILE_DEFINITIONS $<$<CONFIG:Debug>:TINYXML2_DEBUG> _FILE_OFFSET_BITS=64
+    SRCS "tinyxml2.cpp"
+    INCLUDE_DIRS "."
 )
